# go2-autonomous-navigation

./: .gitignore  .gitmodules  README.md  lava-tube-mapping.code-workspace  setup.sh
ros2_ws/src/ltm_exploration/ltm_exploration_core/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_exploration/ltm_exploration_core/config/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml  parameters.yaml
ros2_ws/src/ltm_exploration/ltm_exploration_core/launch/: exploration.launch.py  explore.launch.py
ros2_ws/src/ltm_exploration/ltm_exploration_core/maps/: lab.pgm  lab.yaml  map_lab.pgm
ros2_ws/src/ltm_exploration/ltm_pointcloud_filter/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_exploration/ltm_pointcloud_filter/config/: parameters.yaml
ros2_ws/src/ltm_exploration/ltm_pointcloud_filter/launch/: pointcloud_filter.launch.py
ros2_ws/src/ltm_exploration/ltm_pointcloud_filter/meshes/: hip.stl  thigh.stl  thigh_mirror.stl
ros2_ws/src/ltm_exploration/ltm_pointcloud_filter/src/: crop_box_filter_node.cpp  ground_plane_segmentation.cpp  ground_plane_segmentation_node.cpp  pointcloud_filter_node.cpp  robot_cluster_removal.cpp  statistical_outlier_removal.cpp  statistical_outlier_removal_node.cpp  voxel_grid_filter.cpp  voxel_grid_filter_node.cpp
ros2_ws/src/ltm_exploration/ltm_pointcloud_filter/urdf/: go2_description.urdf
ros2_ws/src/ltm_exploration/ltm_pointcloud_multiplexer/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_exploration/ltm_pointcloud_multiplexer/config/: parameters.yaml
ros2_ws/src/ltm_exploration/ltm_pointcloud_multiplexer/launch/: pointcloud_mux.launch.py
ros2_ws/src/ltm_exploration/ltm_pointcloud_multiplexer/src/: pointcloud_mux_node.cpp
ros2_ws/src/ltm_exploration/ltm_pointcloud_transformer/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_exploration/ltm_pointcloud_transformer/config/: buffered_pointcloud_params.yaml  parameters.yaml  raw_pointcloud_params.yaml
ros2_ws/src/ltm_exploration/ltm_pointcloud_transformer/launch/: buffered_pointcloud_transformer.launch.py  pointcloud_transformer.launch.py  raw_pointcloud_transformer.launch.py
ros2_ws/src/ltm_exploration/ltm_pointcloud_transformer/src/: pointcloud_transformer_node.cpp
ros2_ws/src/ltm_exploration/ltm_scan_procedure/: package.xml  setup.cfg  setup.py
ros2_ws/src/ltm_exploration/ltm_scan_procedure/config/: parameters.yaml
ros2_ws/src/ltm_exploration/ltm_scan_procedure/launch/: scan.launch.py
ros2_ws/src/ltm_exploration/ltm_scan_procedure/ltm_scan_procedure/: data_storage.py  scan_procedure_node.py  utils.py
ros2_ws/src/ltm_go2/ltm_go2_auxiliary_sensors/: package.xml  setup.cfg  setup.py
ros2_ws/src/ltm_go2/ltm_go2_auxiliary_sensors/ltm_go2_auxiliary_sensors/: auxiliary_sensors_node.py
ros2_ws/src/ltm_go2/ltm_go2_camera/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_go2/ltm_go2_camera/config/: go2_parameters.yaml  monocamera_params.yaml  parameters.yaml
ros2_ws/src/ltm_go2/ltm_go2_camera/launch/: camera.launch.py  d435i_camera.launch.py  mono_camera.launch.py
ros2_ws/src/ltm_go2/ltm_go2_camera/src/: go2_camera_node.cpp
ros2_ws/src/ltm_go2/ltm_go2_controller/: CMakeLists.txt  package.xml  setup.cfg
ros2_ws/src/ltm_go2/ltm_go2_controller/ltm_go2_controller/: keyboard_teleop_node.py
ros2_ws/src/ltm_go2/ltm_go2_controller/src/: go2_controller_node.cpp
ros2_ws/src/ltm_go2/ltm_go2_driver/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_go2/ltm_go2_driver/config/: parameters.yaml
ros2_ws/src/ltm_go2/ltm_go2_driver/launch/: go2_driver.launch.py
ros2_ws/src/ltm_go2/ltm_go2_driver/src/: battery_management_processing.cpp  cmd_vel_processing.cpp  controller_processing.cpp  foot_contact_processing.cpp  front_camera_processing.cpp  gesture_processing.cpp  go2_driver_node.cpp  joint_state_processing.cpp  odom_processing.cpp  point_cloud_processing.cpp  wireless_controller_processing.cpp
ros2_ws/src/ltm_go2/ltm_go2_rviz_plugins/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
ros2_ws/src/ltm_go2/ltm_go2_rviz_plugins/src/: battery_management_display.cpp  scan_procedure_display.cpp
ros2_ws/src/ltm_go2/ltm_go2_state/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_go2/ltm_go2_state/src/: go2_state_handler_node.cpp
ros2_ws/src/ltm_hardware_interface/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_hardware_interface/config/: parameters.yaml
ros2_ws/src/ltm_hardware_interface/include/ltm_hardware_interface/: front_camera_processing.hpp  hardware_interface_node.hpp  joint_state_processing.hpp  odom_processing.hpp
ros2_ws/src/ltm_hardware_interface/launch/: go2_driver.launch.py
ros2_ws/src/ltm_hardware_interface/src/: front_camera_processing.cpp  go2_driver_node.cpp  hardware_interface_node.cpp  joint_state_processing.cpp  odom_processing.cpp
ros2_ws/src/ltm_mission/ltm_shared_msgs/: CMakeLists.txt
ros2_ws/src/ltm_mission/ltm_shared_msgs/msg/: AuxiliarySensorState.msg  BatteryState.msg  FootContact.msg  MissionState.msg
ros2_ws/src/ltm_mission/ltm_shared_msgs/srv/: CheckWaypoints.srv  (+5 more)
ros2_ws/src/ltm_navigation/ltm_navigation_service/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_pointcloud_filter/: CMakeLists.txt  package.xml
ros2_ws/src/ltm_pointcloud_filter/config/: parameters.yaml
ros2_ws/src/ltm_pointcloud_filter/src/: ground_plane_removal.cpp  pointcloud_filter_node.cpp  robot_cluster_removal.cpp  voxel_grid_filter.cpp
ros2_ws/src/utilities/odometry_bias_estimation/: package.xml  setup.cfg  setup.py
src/go2_simulation/: CMakeLists.txt  package.xml
src/go2_simulation/launch/: gazebo.launch.py
src/go2_simulation/models/unitree_go2/: unitree_go2.sdf  unitree_go2.xacro
src/go2_simulation/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
src/go2_simulation/scripts/: spawn_go2.py
src/unitree_legged_control/: CMakeLists.txt  package.xml
src/unitree_legged_control/include/unitree_legged_control/: joint_controller.h
src/unitree_legged_control/src/: joint_controller.cpp  unitree_joint_control_tool.cpp
src/unitree_legged_msgs/: CMakeLists.txt  package.xml
src/unitree_legged_msgs/msg/: HighCmd.msg  HighState.msg  LowCmd.msg  LowState.msg
(+166 files in other folders)
