<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ltm_hardware_interface</name>
  <version>0.0.0</version>
  <description>This package contains the hardware interface for the LTM robot.</description>
  <maintainer email="bec_alexanderjames@outlook.com">Alexander James Becoy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_go</depend>
  <depend>urdf</depend>
  <depend>tf2_ros</depend>
  <depend>ltm_go2_description</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
