<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ltm_exploration_core</name>
  <version>0.0.0</version>
  <description>This package contains the stack of the LTM exploration packages.</description>
  <maintainer email="alexanderjames.becoy@outlook.com">Alexander James Becoy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ltm_pointcloud_buffer</exec_depend>
  <exec_depend>ltm_pointcloud_filter</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
