<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ltm_pointcloud_transformer</name>
  <version>0.0.0</version>
  <description>This package transforms the pointcloud from the octomap from odom frame to base_footprint frame</description>
  <maintainer email="alexanderjames.becoy@outlook.com">Alexander James Becoy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>PCL</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
