<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ltm_go2_rviz_plugins</name>
  <version>0.0.0</version>
  <description>This package contains rviz plugins for the LTM GO2 project.</description>
  <maintainer email="alexanderjames.becoy@outlook.com">Alexander James Becoy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>ltm_shared_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
