<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ltm_go2_state</name>
  <version>0.0.0</version>
  <description>This package handles the states regarding the LTM Go2 robot: BootUp, Emergency, Error, and Shutdown.</description>
  <maintainer email="alexanderjames.becoy@outlook.com">Alexander James Becoy</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>ltm_shared_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
