<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odometry_bias_estimation</name>
  <version>0.0.0</version>
  <description>This package contains a node that estimates the bias of the odometry of Unitree Go2.</description>
  <maintainer email="alexanderjames.becoy@outlook.com">Alexander James Becoy</maintainer>
  <license>TODO: License declaration</license>

  <depend>unitree_go</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
